@@ -67,16 +67,33 @@ class ETreeXPathTestCase(HelperTestCase):
         self.assertEquals(['Foo', 'Bar'],
                           tree.xpath('/a/b/text()'))
 
+    def test_xpath_list_text_parent(self):
+        tree = self.parse('<a><b>FooBar</b><b>BarFoo</b></a>')
+        root = tree.getroot()
+        self.assertEquals(['FooBar', 'BarFoo'],
+                          tree.xpath('/a/b/text()'))
+        self.assertEquals([root[0], root[1]],
+                          [r.getparent() for r in tree.xpath('/a/b/text()')])
+
+    def test_xpath_list_unicode_text_parent(self):
+        xml = u'<a><b>FooBar\u0680\u3120</b><b>BarFoo\u0680\u3120</b></a>'
+        tree = self.parse(xml.encode('utf-8'))
+        root = tree.getroot()
+        self.assertEquals([u'FooBar\u0680\u3120', u'BarFoo\u0680\u3120'],
+                          tree.xpath('/a/b/text()'))
+        self.assertEquals([root[0], root[1]],
+                          [r.getparent() for r in tree.xpath('/a/b/text()')])
+
     def test_xpath_list_attribute(self):
         tree = self.parse('<a b="B" c="C"/>')
         self.assertEquals(['B'],
                           tree.xpath('/a/@b'))
 
     def test_xpath_list_attribute_parent(self):
-        tree = self.parse('<a b="B" c="C"/>')
+        tree = self.parse('<a b="BaSdFgHjKl" c="CqWeRtZuI"/>')
         results = tree.xpath('/a/@c')
         self.assertEquals(1, len(results))
-        self.assertEquals('C', results[0])
+        self.assertEquals('CqWeRtZuI', results[0])
         self.assertEquals(tree.getroot().tag, results[0].getparent().tag)
 
     def test_xpath_list_comment(self):
